--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/MateusERamos/document-engine#readme",
   "devDependencies": {
     "parcel": "^2.6.0"
+  },
+  "dependencies": {
+    "slugify": "^1.6.5"
   }
 }
