--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
   "name": "document-engine",
-  "description": "",
+  "description": "Document engine for processing documents in javascript by lawing.",
   "version": "1.0.0",
-  "source": "src/index.js",
-  "main": "dist/document-engine.min.js",
-  "module": "dist/document-engine-module.js",
+  "author": "Parafernália Interativa <contato@parafernalia.net.br>",
+  "license": "ISC",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/.bin/parcel build",
-    "start": "./node_modules/.bin/parcel watch"
+    "prebuild": "rimraf dist",
+    "build": "cross-env-shell parcel build src/index.js --out-file $npm_package_name.min.js --no-source-maps --experimental-scope-hoisting",
+    "start": "parcel serve src/index.html --open"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MateusERamos/document-engine.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MateusERamos/document-engine/issues"
-  },
-  "homepage": "https://github.com/MateusERamos/document-engine#readme",
   "devDependencies": {
-    "parcel": "^2.6.0"
+    "@babel/core": "^7.18.2",
+    "@babel/eslint-parser": "^7.18.2",
+    "@babel/plugin-transform-runtime": "^7.18.2",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.16.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.0",
+    "parcel-bundler": "^1.12.5",
+    "prettier": "^2.6.2",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
     "nunjucks": "^3.2.3",
     "slugify": "^1.6.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint --cache --fix",
+    "*.{js,css,md}": "prettier --write --ignore-unknown"
   }
 }
