--- a/package.json
+++ b/package.json
@@ -4,23 +4,22 @@
   "version": "1.0.0",
   "author": "Parafernália Interativa <contato@parafernalia.net.br>",
   "license": "ISC",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prebuild": "rimraf dist",
-    "build": "cross-env-shell parcel build src/index.js --out-file $npm_package_name.min.js --no-source-maps --experimental-scope-hoisting",
-    "start": "parcel serve src/index.html --open"
+  "source": "src/index.js",
+  "main": "dist/main.js",
+  "targets": {
+    "main": {
+      "includeNodeModules": [
+        "extenso",
+        "nunjucks",
+        "ordinal-pt-br",
+        "slugify",
+        "process"
+      ]
+    }
   },
-  "devDependencies": {
-    "@babel/core": "^7.18.2",
-    "@babel/eslint-parser": "^7.18.2",
-    "@babel/plugin-transform-runtime": "^7.18.2",
-    "cross-env": "^7.0.3",
-    "eslint": "^8.16.0",
-    "husky": "^8.0.1",
-    "lint-staged": "^13.0.0",
-    "parcel-bundler": "^1.12.5",
-    "prettier": "^2.6.2",
-    "rimraf": "^3.0.2"
+  "scripts": {
+    "watch": "parcel watch src/index.js",
+    "build": "parcel build src/index.js"
   },
   "dependencies": {
     "extenso": "^2.0.1",
@@ -28,13 +27,10 @@
     "ordinal-pt-br": "^1.0.0",
     "slugify": "^1.6.5"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": "eslint --cache --fix",
-    "*.{js,css,md}": "prettier --write --ignore-unknown"
+  "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@babel/plugin-transform-runtime": "^7.18.2",
+    "parcel": "^2.6.0",
+    "process": "^0.11.10"
   }
 }
